--- a/web_backend/src/web_backend.Blazor.Client/_Imports.razor
+++ b/web_backend/src/web_backend.Blazor.Client/_Imports.razor
@@ -13,3 +13,7 @@
 @using Blazorise.DataGrid
 @using Volo.Abp.BlazoriseUI
 @using Volo.Abp.BlazoriseUI.Components
+@using web_backend.Blazor.Client
+@using web_backend.Blazor.Client.Services
+@using web_backend.Blazor.Client.Pages
+@using web_backend.Blazor.Client.Pages.Components
