--- a/web_backend/src/web_backend.Blazor.Client/Routes.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Routes.razor
@@ -1,20 +1,2 @@
-﻿@using Volo.Abp.AspNetCore.Components.Web.BasicTheme.Themes.Basic
-@using Volo.Abp.AspNetCore.Components.WebAssembly.WebApp
-@using Microsoft.AspNetCore.Components.Authorization
-
-<CascadingAuthenticationState>
-    <Router AppAssembly="typeof(Program).Assembly" AdditionalAssemblies="WebAppAdditionalAssembliesHelper.GetAssemblies<web_backendBlazorClientModule>()">
-        <Found Context="routeData">
-            <AuthorizeRouteView RouteData="routeData" DefaultLayout="typeof(MainLayout)">
-                <NotAuthorized>
-                    <RedirectToLogin />
-                </NotAuthorized>
-            </AuthorizeRouteView>
-        </Found>
-        <NotFound>
-            <LayoutView Layout="typeof(MainLayout)">
-                <p>Sorry, there's nothing at this address.</p>
-            </LayoutView>
-        </NotFound>
-    </Router>
-</CascadingAuthenticationState>
+﻿@* Routes.razor is now deprecated as we're using App.razor directly *@
+@* This file is kept for compatibility *@
