--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -5,12 +5,12 @@
 @using System.Linq
 @using Microsoft.AspNetCore.Components.Web
 @using web_backend.Blazor.Client.Pages.Components
+@using web_backend.Enums
 @inject AuthenticationStateProvider AuthenticationStateProvider
 @inject NavigationManager NavigationManager
 @inject ILivestreamAppService LivestreamService
 @inject IJSRuntime JS
 @inject DebugService DebugService
-@using web_backend.Enums
 @implements IDisposable
 
 <HeadContent>
@@ -24,7 +24,7 @@
 <div class="vss-page">
     <header class="vss-header navbar navbar-expand-lg">
         <!-- Logo -->
-        <a class="vss-header__logo navbar-brand" href="/">
+        <a class="vss-header__logo navbar-brand" href="/landing">
             <img src="/images/varsitylogoempty.jpg" alt="VSS Company Header Logo" width="120" />
         </a>
 
@@ -37,7 +37,7 @@
         <nav class="collapse navbar-collapse vss-header" id="vssNavbar">
             <ul class="vss-nav navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="vss-nav__item nav-item">
-                    <a class="vss-nav__link nav-link" href="/">
+                    <a class="vss-nav__link nav-link" href="/landing">
                         Home
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
@@ -121,15 +121,15 @@
                     <span class="vss-auth__username navbar-text me-3">
                         Hello, @GetUserDisplayName(authState.User)
                     </span>
-                    <a class="vss-auth__link nav-link" href="/Account/Logout">Logout</a>
+                    <a class="vss-auth__link nav-link" href="authentication/logout" @onclick="LogoutClick">Logout</a>
                 }
                 else
                 {
-                    <a class="vss-auth__button btn me-3" href="/authentication/Login">
+                    <a class="vss-auth__button btn me-3" href="authentication/login">
                         Login
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
-                    <a class="vss-auth__button btn" href="/Account/Register">
+                    <a class="vss-auth__button btn" href="Account/Register">
                         Register
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
@@ -264,6 +264,11 @@
         await JS.InvokeVoidAsync("console.log", "No active livestreams to navigate to");
 
         await JS.InvokeVoidAsync("showBannerNotification", "No active livestreams available at the moment. Please check back later.");
+    }
+
+    private void LogoutClick()
+    {
+        NavigationManager.NavigateTo("authentication/logout");
     }
 
     public void Dispose()
