--- a/web_backend/src/web_backend.Blazor.Client/App.razor
+++ b/web_backend/src/web_backend.Blazor.Client/App.razor
@@ -6,10 +6,10 @@
     <Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-                <NotAuthorized>
-                    @if (context.User.Identity?.IsAuthenticated != true)
+                <NotAuthorized Context="authContext">
+                    @if (!authContext.User.Identity?.IsAuthenticated ?? true)
                     {
-                        <RedirectToLogin />
+                        <Volo.Abp.AspNetCore.Components.Web.BasicTheme.Themes.Basic.RedirectToLogin />
                     }
                     else
                     {
