--- a/web_backend/src/web_backend.Blazor.Client/App.razor
+++ b/web_backend/src/web_backend.Blazor.Client/App.razor
@@ -6,8 +6,8 @@
     <Router AppAssembly="@typeof(Program).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
-                <NotAuthorized Context="authContext">
-                    @if (!authContext.User.Identity?.IsAuthenticated ?? true)
+                <NotAuthorized Context="notAuthorizedContext">
+                    @if (!notAuthorizedContext.User.Identity?.IsAuthenticated ?? true)
                     {
                         <Volo.Abp.AspNetCore.Components.Web.BasicTheme.Themes.Basic.RedirectToLogin />
                     }
