--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -121,15 +121,15 @@
                     <span class="vss-auth__username navbar-text me-3">
                         Hello, @GetUserDisplayName(authState.User)
                     </span>
-                    <a class="vss-auth__link nav-link" href="authentication/logout" @onclick="LogoutClick">Logout</a>
+                    <a class="vss-auth__link nav-link" href="/Account/Logout">Logout</a>
                 }
                 else
                 {
-                    <a class="vss-auth__button btn me-3" href="authentication/login">
+                    <a class="vss-auth__button btn me-3" href="/Account/Login">
                         Login
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
-                    <a class="vss-auth__button btn" href="Account/Register">
+                    <a class="vss-auth__button btn" href="/Account/Register">
                         Register
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
@@ -268,7 +268,7 @@
 
     private void LogoutClick()
     {
-        NavigationManager.NavigateTo("authentication/logout");
+        NavigationManager.NavigateTo("/Account/Logout");
     }
 
     public void Dispose()
