--- a/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
+++ b/web_backend/src/web_backend.Blazor.Client/MainLayout.razor
@@ -121,15 +121,15 @@
                     <span class="vss-auth__username navbar-text me-3">
                         Hello, @GetUserDisplayName(authState.User)
                     </span>
-                    <a class="vss-auth__link nav-link" href="/Account/Logout">Logout</a>
+                    <a class="vss-auth__link nav-link" href="#" @onclick="LogoutClick" @onclick:preventDefault>Logout</a>
                 }
                 else
                 {
-                    <a class="vss-auth__button btn me-3" href="/Account/Login">
+                    <a class="vss-auth__button btn me-3" href="#" @onclick="LoginClick" @onclick:preventDefault>
                         Login
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
-                    <a class="vss-auth__button btn" href="/Account/Register">
+                    <a class="vss-auth__button btn" href="#" @onclick="RegisterClick" @onclick:preventDefault>
                         Register
                         <svg><rect x="0" y="0" width="100%" height="100%"></rect></svg>
                     </a>
@@ -266,9 +266,19 @@
         await JS.InvokeVoidAsync("showBannerNotification", "No active livestreams available at the moment. Please check back later.");
     }
 
+    private void LoginClick()
+    {
+        NavigationManager.NavigateTo("/Account/Login", forceLoad: true);
+    }
+
+    private void RegisterClick()
+    {
+        NavigationManager.NavigateTo("/Account/Register", forceLoad: true);
+    }
+
     private void LogoutClick()
     {
-        NavigationManager.NavigateTo("/Account/Logout");
+        NavigationManager.NavigateTo("/Account/Logout", forceLoad: true);
     }
 
     public void Dispose()
