--- a/web_backend/src/web_backend.Blazor.Client/Pages/Components/LandingPage.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Components/LandingPage.razor
@@ -35,7 +35,7 @@
                                     <div class="vss-preview-overlay d-flex flex-column justify-content-center align-items-center">
                                         <h4>Subscribe to Watch the Full Stream</h4>
                                         <p class="mb-3">You've reached the end of the preview.</p>
-                                        <a class="vss-auth__button" href="/account/login">Log In / Subscribe</a>
+                                        <a class="vss-auth__button" href="/authentication/login">Log In / Subscribe</a>
                                     </div>
                                 }
                             </div>
