--- a/web_backend/src/web_backend.Blazor.Client/Pages/Account/Login.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Account/Login.razor
@@ -1,5 +1,11 @@
 @page "/account/login"
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Volo.Abp.Identity
 @using System.ComponentModel.DataAnnotations
+@using Microsoft.AspNetCore.WebUtilities
+@using System.Text
+@using System.Text.Encodings.Web
+@using System.Net.Http.Json
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime
 @inject HttpClient HttpClient
