--- a/web_backend/src/web_backend.Blazor.Client/Pages/Account/Register.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Account/Register.razor
@@ -1,5 +1,7 @@
 @page "/account/register"
 @using System.ComponentModel.DataAnnotations
+@using Volo.Abp.Identity
+@using System.Net.Http.Json
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime
 @inject HttpClient HttpClient
