--- a/web_backend/src/web_backend.Blazor.Client/Pages/Account/ForgotPassword.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Account/ForgotPassword.razor
@@ -1,5 +1,6 @@
 @page "/account/forgot-password"
 @using System.ComponentModel.DataAnnotations
+@using System.Net.Http.Json
 @inject NavigationManager Navigation
 @inject IJSRuntime JSRuntime
 @inject HttpClient HttpClient
