--- a/web_backend/src/web_backend.Blazor.Client/Pages/Account/ForgotPassword.razor
+++ b/web_backend/src/web_backend.Blazor.Client/Pages/Account/ForgotPassword.razor
@@ -10,7 +10,7 @@
         <div class="card mt-3 shadow-sm rounded">
             <div class="card-body p-5">
                 <h4>Forgot Password</h4>
-                <form class="mt-4" @onsubmit="SendResetLink">
+                <form method="post" class="mt-4" @onsubmit="SendResetLink">
                     <p>Enter your email address and we will send you a link to reset your password.</p>
                     
                     <div class="mb-3">
@@ -24,7 +24,7 @@
                             @if (isLoading)
                             {
                                 <span class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-                                <span> Processing...</span>
+                                <span> Sending...</span>
                             }
                             else
                             {
